--- a/station-game/bower.json
+++ b/station-game/bower.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.6",
     "angular": "^1.5.0",
-    "font-awesome": "fontawesome#^4.5.0",
+    "font-awesome": "^4.5.0",
     "angular-ui-router": "^0.2.18"
   }
 }
