--- a/station-game/package.json
+++ b/station-game/package.json
@@ -21,7 +21,6 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-html2js": "^0.3.5",
-    "station-shared": "file:../station-shared"
+    "grunt-html2js": "^0.3.5"
   }
 }
