Removed station-forge for now.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "cave-diver",
-  "description": "",
+  "name": "station",
+  "description": "STATION",
   "main": "index.js",
   "authors": [
     "Blackbaud-SteveBrush <steve.brush@blackbaud.com>"
@@ -16,9 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass": "^3.3.6",
     "angular": "^1.5.0",
-    "font-awesome": "fontawesome#^4.5.0",
     "angular-ui-router": "^0.2.18"
   }
 }
