--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-html2js": "^0.3.5"
+    "grunt-html2js": "^0.3.5",
+    "merge": "^1.2.0",
+    "mongoose": "^4.4.7"
   }
 }
